changed the dashboard to fluid layout

--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -1,6 +1,6 @@
 <div class="signedInHeader">
-	<div class="container">
-		<div class="row">
+	<div class="container-fluid">
+		<div class="row-fluid">
 			<%= link_to image_tag('resumeQuery_white.png'), root_path %>
 			<div class="pull-right">
 				<ul class="inline">
