--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -1,5 +1,13 @@
 <div class="container">
 	<div class="row">
 		<%= render 'staticpages/fourSteps' %>
+		
+		
+		<pre>University of New South Wales</br>Commerce </pre>
+		<p>Other 'modes' include Computer Science & Law. First Year mode as well.</p>
+		<p>"The best way to get what you want is to deserve it " -Charlie Munger</p>
+		<!-- Remove line when done-->
+		<pre>Put the four steps here</pre></br>
+		
 	</div>
 </div>
