added really basic security, a few graphical changes

--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,6 +1,9 @@
 <div class="sellingpoints">
-	<h4>First and foremost: we help you</h4>
-	<p>Information.</p>
+	<h4>We use what's actually worked</h4>
+	<p>The information we put onto our website is based
+		off what has worked for other applicants in the past, 
+		continuously updated with relevant information - not
+		just HR speak</p>
 	</br>
 	<div class="divider" style="width:100%;background-color:white;height:1px;">
 	</div>
