--- a/app/views/staticpages/dashboard.html.erb
+++ b/app/views/staticpages/dashboard.html.erb
@@ -1,3 +1,14 @@
+<div class="dashboardHeader">
+	<div class="container-fluid">
+		<div class="row-fluid">
+
+			<p>There's more to a good resume than just what you've done</p>
+
+		</div>
+	</div>
+</div>
+
+
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span4">
