--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-	<div class="row">
+<div class="container-fluid">
+	<div class="row-fluid">
 
 		<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -36,8 +36,7 @@
 
 		<h3>Cancel my account</h3>
 
-		<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+		<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
-		<%= link_to "Back", :back %>
 	</div>
 </div>
