--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -2,17 +2,29 @@
 	<div class="infoBar">
 		<div class="container">
 			<div class="row">
-				<div class="span7">
+				<div class="span12">
 					<div class="copyText">
-						<h1>Bring out your real accomplishments to your resume </h1></br>
-						<h3>Don't hide your true worth with our
-							 questionnare and peer review tools. </h3>
+						<h1>Bring out your real </br>accomplishments to your resume </h1>
+						</br>
+						<h4>Show your true worth to the right employers with our
+							 resume tools. </h4>
+						</br>
+						<div class="btn btn-large btn-success">
+							Sign up to the limited UNSW Beta
+						</div>
 					</div>	
-				</div>
-				<div class="span5">
-
 				</div>
 			</div>
 		</div>
 	</div>
+	
+	<div class="container">
+		<div class="row">
+			<div class="steps">
+				<p>We're currently building resume and employer profiles for:</p>
+				Circle with: Commerce Comptuer Science and Law
+			</div>
+		</div>
+	</div>
+	
 <% end %>
