--- a/app/views/staticpages/dashboard.html.erb
+++ b/app/views/staticpages/dashboard.html.erb
@@ -9,9 +9,12 @@
 </div>
 
 
+
+
+
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="span4">
+		<div class="span3">
 			<div class="dashboardBar">
 
 			</div>
@@ -21,5 +24,10 @@
 				<%= render 'dashboard/current_resume'%>
 			</div>
 		</div>
+		
+		<div class="span1">
+
+		</div>
+		
 	</div>		
 </div>
