added forms to the dashboard for education

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,18 +3,25 @@
 		</br></br>
 		<%=render 'staticpages/linebar'%>
 		<div class="span12">
-			<ul class="inline">
-				<li><strong>resumeQuery</strong></li>
-				<li><%= link_to 'About Us', about_path %></li>
-				<li><%= link_to 'Press' %></li>
-				<li><%= link_to 'Contact Us' %></li>
-				<li><%= link_to 'Privacy Policy' %></li>
-				<li><%= link_to 'Blog' %></li>				
-				<li><%= link_to 'Twitter' %></li>
-				<% if signed_in? %>
-					<li><%= link_to 'Help' %></li>
-				<% end %>
-			</ul>
+			<div class="footer">
+				<ul class="inline">
+					<li><strong>resumeQuery</strong></li>
+					<li><%= link_to 'About Us', about_path %></li>
+					<li><%= link_to 'Contact Us' %></li>
+					<li><%= link_to 'Privacy Policy' %></li>
+					<li><%= link_to 'Blog' %></li>				
+					<li><%= link_to 'Twitter' %></li>
+					<% if signed_in? %>
+				      <li><%= link_to 'Help' %></li>
+					<% end %>
+					
+					<li class="pull-right">  </li>
+					
+				</ul>
+			</div>
+			
+
+			
 		</div>
 	</div>
 </div>
