--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,6 @@ $siteOrange: #fbe7d1;
 $siteAqua: #4ea39c;
 $siteRed: #9e0b0f;
 $siteText: #333333;
-$white: #ffffff;
 
 @font-face {
     font-family: 'OswaldBold';
@@ -75,6 +74,11 @@ $white: #ffffff;
 		}
 		text-align:center
 	}
+	
+	.listCopy {
+		padding-top:40px;
+		
+	}
 
 /* steps */
 	.steps{
@@ -101,11 +105,11 @@ $white: #ffffff;
 /* Signed In Header */
 	
 	.signedInHeader{
-		height:40px;
+		height:42px;
 		background-color: $siteGreen;
 		line-height:40px;
 		a{
-			color:$white;
+			color:white;
 		}
 		a:hover{
 			color:$standardGrey;
@@ -151,6 +155,32 @@ $white: #ffffff;
 	.dashboardBar {
 		text-align:center;
 		padding-top:30px;
+		input {
+			border:0px;
+			font-size:13px;
+			margin:0px;
+			line-height:20px;
+			box-shadow:0px;
+			padding:0px;
+			box-shadow:0px;
+			box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+			
+		}
+		
+	}
+	
+	
+	.resumeForm{
+		input{
+			border:0px;
+			font-size:13px;
+			margin:0px;
+			box-shadow:0px;
+			padding:0px;
+			box-shadow:0px;
+			box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+			width:100%;
+		}
 	}
 	
 	.dashboardHeader{
@@ -245,5 +275,13 @@ $white: #ffffff;
 	}
 	
 	.errors {
+
+	}
+	
+	
+	
+	
+	
+	.footer{
 
 	}
