--- a/app/views/dashboard/_current_resume.html.erb
+++ b/app/views/dashboard/_current_resume.html.erb
@@ -9,24 +9,31 @@
 	</br>
 </div>
 
-<legend> Education <div class="pull-right"><%= link_to 'Add Education', new_school_path%></div></legend>
-<% if @schoolCount != 0 %>
+<legend> Education <div class="pull-right"><%= link_to '	+', new_school_path%></div></legend>
+	
 	<% @schoolAll.each do |school| %>
-		<%= link_to "/schools/#{school.id}/edit" do %>
-			<ul class="unstyled">
-				<li><strong><%= school.name %></strong></li>
-				<li><%= school.degree %></li>
-				<li><%= school.majors %></li>
-				<li><%= school.marks%></li>
-				
-				
-				
-			</ul>	
+		<%= form_for school do |f| %>
+	
+	<div class="resumeForm">
+		<div class="row-fluid">
+			<div class="span10">
+				<%= f.text_field :name	, :placeholder => "University/School", :style => "font-weight:bold" %>
+				<%= f.text_field :degree, :placeholder => "Degree Name" %>
+				<%= f.text_field :majors, :placeholder => "Add in majors or Specialisation Name"%>
+				<%= f.text_field :marks,  :placeholder => "Add in marks or GPA" %></br></br>				
+			</div>	
+			
+			<div class="span2">
+				<%= f.submit "Update Education", :class => "btn btn-warning"  %>
+				<%= link_to "Delete This School", @user, method: :delete,
+																	  data: { confirm: 'You Sure?'}%>				
+			</div>
+		</div>
+	
 		<% end %>
 	<% end %>
-<% else %>	
-	<%=link_to 'Start filling in your educational details', new_school_path %>	
-<% end %>
+	</div>
+
 </br></br>
 	
 <legend> Employment <div class="pull-right"><%= link_to 'Add Employment Details', new_employment_path %></div></legend>
