--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -20,9 +20,25 @@
 	
 	<div class="container">
 		<div class="row">
-			<div class="steps">
-				<p>We're currently building resume and employer profiles for:</p>
-				Circle with: Commerce Comptuer Science and Law
+			<div class="span4">
+				<div class="listCopy">
+					<h5>Join your peers in:</h5>
+					<ul class="unstyled">
+						<li><i class="icon-check"></i> Improving the structure of your resume</li>
+						<li><i class="icon-flag"></i>  Differentiating yourself against other applicants</li>
+						<!-- unfalse this when database is implemented -->
+						<% if false %>
+						<li><i class="icon-info-sign"></i> <del>A database of employers & how they hire</del></li>
+						<li><i class="icon-comment"></i><del> Anonymous discussion board about employers</del></li>
+						<% end %>
+					</ul>	
+				</div>
+			</div>
+			<div class="span8">
+				<div class="steps">
+					<p>We're currently building resume and employer profiles for:</p>
+					Commerce, Computer Science and Law students | Place some images here
+				</div>
 			</div>
 		</div>
 	</div>
