--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,7 @@ $siteOrange: #fbe7d1;
 $siteAqua: #4ea39c;
 $siteRed: #9e0b0f;
 $siteText: #333333;
+$offWhite: #FFDFCC;
 
 @font-face {
     font-family: 'OswaldBold';
@@ -155,31 +156,22 @@ $siteText: #333333;
 	.dashboardBar {
 		text-align:center;
 		padding-top:30px;
-		input {
-			border:0px;
-			font-size:13px;
-			margin:0px;
-			line-height:20px;
-			box-shadow:0px;
-			padding:0px;
-			box-shadow:0px;
-			box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
-			
-		}
-		
 	}
 	
 	
 	.resumeForm{
 		input{
-			border:0px;
-			font-size:13px;
+			outline: none;
+			border:none !important;
+			box-shadow:none !important;
 			margin:0px;
-			box-shadow:0px;
 			padding:0px;
-			box-shadow:0px;
-			box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+			font-size:13px;
 			width:100%;
+		}
+		input:focus{
+			background-color:$offWhite;
+			outline:none;
 		}
 	}
 	
