--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -3,15 +3,14 @@
 	<div class="row-fluid">
 		
 		<div class="span12 dashboardBar">
-			<p><%= current_user.first_name%>'s resumeQuery Dasboard</p>
-
+			<p><%= current_user.first_name%>'s resumeQuery Dashboard</p>
 
 			<ul class="inline"<>
 				<li><%= link_to '1. Write up your resume', resume_path%> </li>
 				<li><%= link_to '2. Bring out your value'%> </li>
 				<li><%= link_to '3. Review your resume'%> </li>
-				<li><strike>4. View Companies (coming soon)</strike></li>	
-				<li class="pull-right">Export your resume</li>
+				<li><strike>4. View Companies & Manage apps (coming soon)</strike></li>	
+				<li class="pull-right"><strike>Export your resume</strike></li>
 			</ul>
 		</div>
 	</div>
@@ -26,12 +25,21 @@
 						<h5><i class="icon-star icon-white"></i> What's your current goal?</h5>
 					</div>
 					<div class="span9">
-						<%= form_for :test do |f|%>
-							<%= f.text_field :firstname %>
-							<%= f.submit %>
-						<% end %>
+									<%= render 'dashboards/goal'%>
 					</div>
 				</div>
+			</div>
+			
+			<div class="row-fluid profileSpot">
+				<div class="span5">
+					<div class="dashboardArea">
+						<h1>Have You Ever </br>Managed 5+ people? (Call the model of q's)</h1>
+					</div>
+				</div>
+				
+				<div class="span7">
+				</div>
+				
 			</div>
 			
 			
@@ -58,12 +66,11 @@
 			<div class="profileSpot">
 				<h5>What's broken, hackable or suggestable?</h5>
 				<%= form_for @problem, :as => :problems do |f| %>
-					<%= f.text_area :problem, :placeholder => "We really appreciate what you think and find!" %>
+					<%= f.text_area :problem, :placeholder => 
+						 "We really appreciate what you think and find! Spam us a hello if you'd like!" %>
 					<%= f.hidden_field :reporter_id, :value => current_user.id %>
-					<%= f.submit %>	
+					<%= f.submit "Submit your findings & suggestions", :class=>"btn btn-success" %>	
 				<% end %>
-				<%= link_to "Alternatively Visit our support page!", root_path, :class => "text-center" %>
-
 			</div>
 			
 		</div>
