removed some files

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -3,7 +3,7 @@
 	<div class="row-fluid">
 		
 		<div class="span12 dashboardBar">
-			<p><%= current_user.first_name%>'s resumeQuery Dashboard</p>
+			<p><%= current_user.first_name%>'s ResumeQuery Dashboard</p>
 
 			<ul class="inline"<>
 				<li><%= link_to '1. Write up your resume', resume_path%> </li>
@@ -56,13 +56,16 @@
 		<div class="span3">
 			
 			<div class="profileSpot">
-				<h5>Completion Rate</h5>
+				<h5>ResumeQuery Construction Completion</h5>
 				<div class="row-fluid">
 					<div class="span5">
 						<div class="circleWrapperSmall"></div>
 					</div>
 					<div class="span7">
-						<p>90% Complete</p>
+						<p>We have to add a few more features still! We need
+							Proper questions, a good resume structure page, and 
+							a companies database with a forum for each
+							potential job!</p>
 					</div>
 				</div>
 			</div>
