changes to resume page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -310,3 +310,26 @@ $textAqua: #DEFAF6;
 			width:97%;
 		}
 	}
+	
+	
+	.searchBox {
+		input {
+				outline: none;
+				border:1px solid $textAqua !important;
+				box-shadow:none !important;
+				margin:0px;
+				padding:0 5px;
+				font-size:12px;
+				width:50%;
+				border-radius:0;
+		}
+	}
+	
+	.resumeArea {
+			
+		padding:40px 10px;
+		border-radius:5px;
+		-webkit-box-shadow: 0 0 6px rgba(0,0,0,0.3);
+		-moz-box-shadow: 0 0 6px rgba(0,0,0,0.3);
+		box-shadow: 0 0 6px rgba(0,0,0,0.3);
+	}
