--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -11,7 +11,7 @@
 				
 				<%= form_for :search do |f| %>
 					<%= f.text_field :search, :placeholder => 
-						"Search for Companies, Reviewers & Guides" %> <i class="icon-search icon-white"></i> 
+						"Search for Companies, Posts & Guides" %> <i class="icon-search icon-white"></i> 
 				<% end %>
 				
 				
