fixed loop in responses/new

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -5,7 +5,7 @@
 	
 		<div class = "response">
 
-			<%= link_to response.answer, "#{response.id}/edit" %>
+			<%= link_to response.answer, "responses/#{response.id}/edit" %>
 		</div>
 	<% end %>
 </div>
