added companies model and their pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -334,3 +334,8 @@ $textAqua: #DEFAF6;
 		-moz-box-shadow: 0 0 6px rgba(0,0,0,0.3);
 		box-shadow: 0 0 6px rgba(0,0,0,0.3);
 	}
+
+
+	textarea {
+		width:95%;
+	}
