--- a/app/views/dashboards/_steps.html.erb
+++ b/app/views/dashboards/_steps.html.erb
@@ -5,7 +5,7 @@
 			<li><%= link_to '1. Write up your resume', resume_path%> </li>
 			<li><%= link_to '2. Bring out your value'%> </li>
 			<li><%= link_to '3. Review your resume'%> </li>
-			<li><strike>4. View Companies & Manage apps (being built)</strike></li>	
+			<li><%= link_to '4. View Companies', companies_path %></li>	
 			<li class="pull-right"><strike>Export your resume</strike></li>
 		</ul>
 	</div>
