--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -8,7 +8,7 @@
 					<%= render 'dashboards/goal'%>
 				</div>
 				<div class="row-fluid profileSpot">
-					<h4>Resume Stats:</h4>
+					<h4>Resume Stats // Manage apps should be here:</h4>
 					<div>
 						<ul>
 							<li>You have <%= current_user.schools.count %> Schools</li>
