--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -24,7 +24,20 @@
 				<%= f.submit %>
 			<% end %>
 			
-	
+			<% if @companyJobs != nil %>
+				<% @companyJobs.each do |test| %>
+					<p>Job Name: <%=link_to	"#{test.name}", test %></p>
+				<% end %>
+			<% end %>
 		</div>
 	</div>
+	
+	<div class="row-fluid">
+		<%= form_for @boards, :as => :boards do |f| %>
+			<%= f.text_field :name %>
+			<%= f.submit%>
+		<% end %>
+		
+	</div>	
+	
 </div>
