--- a/app/views/dashboards/_steps.html.erb
+++ b/app/views/dashboards/_steps.html.erb
@@ -6,6 +6,7 @@
 			<li><%= link_to '2. Bring out your value'%> </li>
 			<li><%= link_to '3. Review your resume'%> </li>
 			<li><%= link_to '4. View Companies', companies_path %></li>	
+			<li><%= link_to '4. View Jobs', jobs_path %></li>	
 			<li class="pull-right"><strike>Export your resume</strike></li>
 		</ul>
 	</div>
